--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "unplugin-vue-components": "^0.26.0",
     "unplugin-vue-router": "^0.7.0",
     "vite": "^5.0.0",
+    "vite-plugin-compression": "^0.5.1",
+    "vite-plugin-purgecss": "^0.2.12",
     "vite-plugin-vuetify": "^2.0.0",
     "vue-router": "^4.2.0",
     "vue-tsc": "^1.8.0"
