--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "@mdi/font": "7.0.96",
+    "@unhead/vue": "^1.8.10",
+    "@vueuse/head": "^2.0.0",
     "core-js": "^3.34.0",
     "roboto-fontface": "*",
     "vue": "^3.3.0",
